# Portal-Launcher

./: CHANGELOG.md  tsconfig.json
.github/workflows/: main.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/commands/: audio.rs  auth.rs  chat.rs  curseforge.rs  files.rs  friends.rs  instances.rs  jvm.rs  loader_installer.rs  minecraft.rs  mod.rs  modrinth.rs  mods.rs  settings.rs  skins.rs  token_manager.rs  version_manager.rs  voice.rs  webrtc_signaling.rs
src/components/: DownloadProgress.tsx  ProgressModal.tsx
src/components/auth/: MicrosoftAuth.tsx
src/components/layout/: LeftSidebar.tsx  MainLayout.tsx  RightSidebar.tsx  Sidebar.tsx  TopBar.tsx
src/i18n/: de.json  en.json  fr.json  ru.json  zh.json
src/lib/: tauri-bridge.ts  theme-engine.ts
src/pages/: DiscoverPage.tsx  FriendsPage.tsx  HomePage.tsx  InstanceSettings.tsx  InstancesPage.tsx  LibraryPage.tsx  ModDetail.tsx  SettingsPage.tsx  SkinSelectorPage.tsx
src/stores/: authStore.ts  friendsStore.ts  instanceStore.ts  languageStore.ts  notificationStore.ts  settingsStore.ts
